--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: TypeScript Check
-        run: npm run check
+        run: npm run typecheck
 
       - name: Lint
         run: npm run lint
