--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   "ct3aMetadata": {
     "initVersion": "7.21.0"
   },
-  "packageManager": "npm@9.6.7"
+  "packageManager": "npm@9.6.7",
+  "prisma": {
+    "schema": "db/schema.prisma"
+  }
 }
